Refactored code and fixed bugs